--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -318,7 +318,7 @@ td.status-unknown {
 }
 
 .docker-logs-header {
-  background-color: #f5f5f7;
+  color: white;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
   border-radius: 8px;
